<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shop_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ShopActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shop_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/new_rocket"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/shop_LBL_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amount: 0"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/new_rocket"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"/>

        <ImageView
            android:id="@+id/shop_IMG_dollar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/dollar"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shop_RV_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shop_BTN_purchase"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/purchase"
        android:textAllCaps="true"
        android:fontFamily="@font/new_rocket"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/gold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shop_BTN_back"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/back_to_menu"
        android:textAllCaps="true"
        android:fontFamily="@font/new_rocket"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/gold"
        android:layout_marginTop="16dp"/>

</LinearLayout>
